lab2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> mul_expressions
Rule 1     mul_expressions -> expression
Rule 2     mul_expressions -> expression mul_expressions
Rule 3     expression -> code_block
Rule 4     expression -> base_expr
Rule 5     expression -> base_expr ;
Rule 6     expression -> if_statement
Rule 7     expression -> loop
Rule 8     base_expr -> assignment
Rule 9     base_expr -> return
Rule 10    base_expr -> print
Rule 11    operation -> num
Rule 12    operation -> unary_operation
Rule 13    operation -> function
Rule 14    code_block -> { mul_expressions }
Rule 15    print -> PRINT print_body
Rule 16    print_body -> STRING
Rule 17    print_body -> cond
Rule 18    print_body -> print_body , cond
Rule 19    return -> RETURN cond
Rule 20    return -> RETURN
Rule 21    vector -> [ vector_body ]
Rule 22    vector_body -> num
Rule 23    vector_body -> vector_body , num
Rule 24    vector_body -> empty
Rule 25    matrix -> [ matrix_body ]
Rule 26    matrix_body -> vector
Rule 27    matrix_body -> matrix_body , vector
Rule 28    matrix_body -> empty
Rule 29    num -> NUMBER
Rule 30    num -> REAL_NUMBER
Rule 31    num -> VAR
Rule 32    range -> VAR [ int_num_VAR , int_num_VAR ]
Rule 33    function -> function_name ( num )
Rule 34    function_name -> ONES
Rule 35    function_name -> EYE
Rule 36    function_name -> ZEROS
Rule 37    cond -> cmp
Rule 38    cond -> operation
Rule 39    loop -> while
Rule 40    loop -> for
Rule 41    while -> WHILE ( cond ) loop_body
Rule 42    for -> FOR VAR = int_num_VAR : int_num_VAR loop_body
Rule 43    loop_body -> loop_expr
Rule 44    loop_body -> loop_expr ;
Rule 45    loop_body -> { mul_loop_expr }
Rule 46    loop_expr -> base_expr
Rule 47    loop_expr -> loop
Rule 48    loop_expr -> if_loop_statement
Rule 49    loop_expr -> BREAK
Rule 50    loop_expr -> CONTINUE
Rule 51    mul_loop_expr -> mul_loop_expr loop_body
Rule 52    mul_loop_expr -> loop_body
Rule 53    if_statement -> IF ( cond ) expression else_statement
Rule 54    else_statement -> ELSE expression
Rule 55    else_statement -> empty
Rule 56    if_loop_statement -> IF ( cond ) loop_body else_loop_statement
Rule 57    else_loop_statement -> ELSE loop_body
Rule 58    else_loop_statement -> empty
Rule 59    empty -> <empty>
Rule 60    assignee -> VAR
Rule 61    assignee -> range
Rule 62    assignment -> assignee = cond
Rule 63    assignment -> assignee = matrix
Rule 64    assignment -> assignee = STRING
Rule 65    assignment -> assignee ADDASSIGN cond
Rule 66    assignment -> assignee SUBASSIGN cond
Rule 67    assignment -> assignee MULASSIGN cond
Rule 68    assignment -> VAR DIVASSIGN cond
Rule 69    int_num_VAR -> NUMBER
Rule 70    int_num_VAR -> VAR
Rule 71    unary_operation -> neg_num
Rule 72    unary_operation -> transpose
Rule 73    neg_num -> - num
Rule 74    transpose -> VAR '
Rule 75    operation -> operation + operation
Rule 76    operation -> operation - operation
Rule 77    operation -> operation DOTSUM operation
Rule 78    operation -> operation DOTSUB operation
Rule 79    operation -> operation * operation
Rule 80    operation -> operation / operation
Rule 81    operation -> operation DOTMUL operation
Rule 82    operation -> operation DOTDIV operation
Rule 83    cmp -> operation < operation
Rule 84    cmp -> operation > operation
Rule 85    cmp -> operation EQ operation
Rule 86    cmp -> operation NEQ operation
Rule 87    cmp -> operation GEQ operation
Rule 88    cmp -> operation LEQ operation
Rule 89    operation -> ( operation )

Terminals, with rules where they appear

'                    : 74
(                    : 33 41 53 56 89
)                    : 33 41 53 56 89
*                    : 79
+                    : 75
,                    : 18 23 27 32
-                    : 73 76
/                    : 80
:                    : 42
;                    : 5 44
<                    : 83
=                    : 42 62 63 64
>                    : 84
ADDASSIGN            : 65
BREAK                : 49
COMMENT              : 
CONTINUE             : 50
DIVASSIGN            : 68
DOTDIV               : 82
DOTMUL               : 81
DOTSUB               : 78
DOTSUM               : 77
ELSE                 : 54 57
EQ                   : 85
EYE                  : 35
FOR                  : 42
GEQ                  : 87
IF                   : 53 56
LEQ                  : 88
MULASSIGN            : 67
NEQ                  : 86
NUMBER               : 29 69
ONES                 : 34
PRINT                : 15
REAL_NUMBER          : 30
RETURN               : 19 20
STRING               : 16 64
SUBASSIGN            : 66
VAR                  : 31 32 42 60 68 70 74
WHILE                : 41
ZEROS                : 36
[                    : 21 25 32
]                    : 21 25 32
error                : 
{                    : 14 45
}                    : 14 45

Nonterminals, with rules where they appear

assignee             : 62 63 64 65 66 67
assignment           : 8
base_expr            : 4 5 46
cmp                  : 37
code_block           : 3
cond                 : 17 18 19 41 53 56 62 65 66 67 68
else_loop_statement  : 56
else_statement       : 53
empty                : 24 28 55 58
expression           : 1 2 53 54
for                  : 40
function             : 13
function_name        : 33
if_loop_statement    : 48
if_statement         : 6
int_num_VAR          : 32 32 42 42
loop                 : 7 47
loop_body            : 41 42 51 52 56 57
loop_expr            : 43 44
matrix               : 63
matrix_body          : 25 27
mul_expressions      : 2 14 0
mul_loop_expr        : 45 51
neg_num              : 71
num                  : 11 22 23 33 73
operation            : 38 75 75 76 76 77 77 78 78 79 79 80 80 81 81 82 82 83 83 84 84 85 85 86 86 87 87 88 88 89
print                : 10
print_body           : 15 18
range                : 61
return               : 9
transpose            : 72
unary_operation      : 12
vector               : 26 27
vector_body          : 21 23
while                : 39

Parsing method: LALR

state 0

    (0) S' -> . mul_expressions
    (1) mul_expressions -> . expression
    (2) mul_expressions -> . expression mul_expressions
    (3) expression -> . code_block
    (4) expression -> . base_expr
    (5) expression -> . base_expr ;
    (6) expression -> . if_statement
    (7) expression -> . loop
    (14) code_block -> . { mul_expressions }
    (8) base_expr -> . assignment
    (9) base_expr -> . return
    (10) base_expr -> . print
    (53) if_statement -> . IF ( cond ) expression else_statement
    (39) loop -> . while
    (40) loop -> . for
    (62) assignment -> . assignee = cond
    (63) assignment -> . assignee = matrix
    (64) assignment -> . assignee = STRING
    (65) assignment -> . assignee ADDASSIGN cond
    (66) assignment -> . assignee SUBASSIGN cond
    (67) assignment -> . assignee MULASSIGN cond
    (68) assignment -> . VAR DIVASSIGN cond
    (19) return -> . RETURN cond
    (20) return -> . RETURN
    (15) print -> . PRINT print_body
    (41) while -> . WHILE ( cond ) loop_body
    (42) for -> . FOR VAR = int_num_VAR : int_num_VAR loop_body
    (60) assignee -> . VAR
    (61) assignee -> . range
    (32) range -> . VAR [ int_num_VAR , int_num_VAR ]

    {               shift and go to state 7
    IF              shift and go to state 11
    VAR             shift and go to state 15
    RETURN          shift and go to state 16
    PRINT           shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19

    mul_expressions                shift and go to state 1
    expression                     shift and go to state 2
    code_block                     shift and go to state 3
    base_expr                      shift and go to state 4
    if_statement                   shift and go to state 5
    loop                           shift and go to state 6
    assignment                     shift and go to state 8
    return                         shift and go to state 9
    print                          shift and go to state 10
    while                          shift and go to state 12
    for                            shift and go to state 13
    assignee                       shift and go to state 14
    range                          shift and go to state 20

state 1

    (0) S' -> mul_expressions .



state 2

    (1) mul_expressions -> expression .
    (2) mul_expressions -> expression . mul_expressions
    (1) mul_expressions -> . expression
    (2) mul_expressions -> . expression mul_expressions
    (3) expression -> . code_block
    (4) expression -> . base_expr
    (5) expression -> . base_expr ;
    (6) expression -> . if_statement
    (7) expression -> . loop
    (14) code_block -> . { mul_expressions }
    (8) base_expr -> . assignment
    (9) base_expr -> . return
    (10) base_expr -> . print
    (53) if_statement -> . IF ( cond ) expression else_statement
    (39) loop -> . while
    (40) loop -> . for
    (62) assignment -> . assignee = cond
    (63) assignment -> . assignee = matrix
    (64) assignment -> . assignee = STRING
    (65) assignment -> . assignee ADDASSIGN cond
    (66) assignment -> . assignee SUBASSIGN cond
    (67) assignment -> . assignee MULASSIGN cond
    (68) assignment -> . VAR DIVASSIGN cond
    (19) return -> . RETURN cond
    (20) return -> . RETURN
    (15) print -> . PRINT print_body
    (41) while -> . WHILE ( cond ) loop_body
    (42) for -> . FOR VAR = int_num_VAR : int_num_VAR loop_body
    (60) assignee -> . VAR
    (61) assignee -> . range
    (32) range -> . VAR [ int_num_VAR , int_num_VAR ]

    $end            reduce using rule 1 (mul_expressions -> expression .)
    }               reduce using rule 1 (mul_expressions -> expression .)
    {               shift and go to state 7
    IF              shift and go to state 11
    VAR             shift and go to state 15
    RETURN          shift and go to state 16
    PRINT           shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19

    expression                     shift and go to state 2
    mul_expressions                shift and go to state 21
    code_block                     shift and go to state 3
    base_expr                      shift and go to state 4
    if_statement                   shift and go to state 5
    loop                           shift and go to state 6
    assignment                     shift and go to state 8
    return                         shift and go to state 9
    print                          shift and go to state 10
    while                          shift and go to state 12
    for                            shift and go to state 13
    assignee                       shift and go to state 14
    range                          shift and go to state 20

state 3

    (3) expression -> code_block .

    {               reduce using rule 3 (expression -> code_block .)
    IF              reduce using rule 3 (expression -> code_block .)
    VAR             reduce using rule 3 (expression -> code_block .)
    RETURN          reduce using rule 3 (expression -> code_block .)
    PRINT           reduce using rule 3 (expression -> code_block .)
    WHILE           reduce using rule 3 (expression -> code_block .)
    FOR             reduce using rule 3 (expression -> code_block .)
    $end            reduce using rule 3 (expression -> code_block .)
    }               reduce using rule 3 (expression -> code_block .)
    ELSE            reduce using rule 3 (expression -> code_block .)


state 4

    (4) expression -> base_expr .
    (5) expression -> base_expr . ;

    {               reduce using rule 4 (expression -> base_expr .)
    IF              reduce using rule 4 (expression -> base_expr .)
    VAR             reduce using rule 4 (expression -> base_expr .)
    RETURN          reduce using rule 4 (expression -> base_expr .)
    PRINT           reduce using rule 4 (expression -> base_expr .)
    WHILE           reduce using rule 4 (expression -> base_expr .)
    FOR             reduce using rule 4 (expression -> base_expr .)
    $end            reduce using rule 4 (expression -> base_expr .)
    }               reduce using rule 4 (expression -> base_expr .)
    ELSE            reduce using rule 4 (expression -> base_expr .)
    ;               shift and go to state 22


state 5

    (6) expression -> if_statement .

    {               reduce using rule 6 (expression -> if_statement .)
    IF              reduce using rule 6 (expression -> if_statement .)
    VAR             reduce using rule 6 (expression -> if_statement .)
    RETURN          reduce using rule 6 (expression -> if_statement .)
    PRINT           reduce using rule 6 (expression -> if_statement .)
    WHILE           reduce using rule 6 (expression -> if_statement .)
    FOR             reduce using rule 6 (expression -> if_statement .)
    $end            reduce using rule 6 (expression -> if_statement .)
    }               reduce using rule 6 (expression -> if_statement .)
    ELSE            reduce using rule 6 (expression -> if_statement .)


state 6

    (7) expression -> loop .

    {               reduce using rule 7 (expression -> loop .)
    IF              reduce using rule 7 (expression -> loop .)
    VAR             reduce using rule 7 (expression -> loop .)
    RETURN          reduce using rule 7 (expression -> loop .)
    PRINT           reduce using rule 7 (expression -> loop .)
    WHILE           reduce using rule 7 (expression -> loop .)
    FOR             reduce using rule 7 (expression -> loop .)
    $end            reduce using rule 7 (expression -> loop .)
    }               reduce using rule 7 (expression -> loop .)
    ELSE            reduce using rule 7 (expression -> loop .)


state 7

    (14) code_block -> { . mul_expressions }
    (1) mul_expressions -> . expression
    (2) mul_expressions -> . expression mul_expressions
    (3) expression -> . code_block
    (4) expression -> . base_expr
    (5) expression -> . base_expr ;
    (6) expression -> . if_statement
    (7) expression -> . loop
    (14) code_block -> . { mul_expressions }
    (8) base_expr -> . assignment
    (9) base_expr -> . return
    (10) base_expr -> . print
    (53) if_statement -> . IF ( cond ) expression else_statement
    (39) loop -> . while
    (40) loop -> . for
    (62) assignment -> . assignee = cond
    (63) assignment -> . assignee = matrix
    (64) assignment -> . assignee = STRING
    (65) assignment -> . assignee ADDASSIGN cond
    (66) assignment -> . assignee SUBASSIGN cond
    (67) assignment -> . assignee MULASSIGN cond
    (68) assignment -> . VAR DIVASSIGN cond
    (19) return -> . RETURN cond
    (20) return -> . RETURN
    (15) print -> . PRINT print_body
    (41) while -> . WHILE ( cond ) loop_body
    (42) for -> . FOR VAR = int_num_VAR : int_num_VAR loop_body
    (60) assignee -> . VAR
    (61) assignee -> . range
    (32) range -> . VAR [ int_num_VAR , int_num_VAR ]

    {               shift and go to state 7
    IF              shift and go to state 11
    VAR             shift and go to state 15
    RETURN          shift and go to state 16
    PRINT           shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19

    mul_expressions                shift and go to state 23
    expression                     shift and go to state 2
    code_block                     shift and go to state 3
    base_expr                      shift and go to state 4
    if_statement                   shift and go to state 5
    loop                           shift and go to state 6
    assignment                     shift and go to state 8
    return                         shift and go to state 9
    print                          shift and go to state 10
    while                          shift and go to state 12
    for                            shift and go to state 13
    assignee                       shift and go to state 14
    range                          shift and go to state 20

state 8

    (8) base_expr -> assignment .

    ;               reduce using rule 8 (base_expr -> assignment .)
    {               reduce using rule 8 (base_expr -> assignment .)
    IF              reduce using rule 8 (base_expr -> assignment .)
    VAR             reduce using rule 8 (base_expr -> assignment .)
    RETURN          reduce using rule 8 (base_expr -> assignment .)
    PRINT           reduce using rule 8 (base_expr -> assignment .)
    WHILE           reduce using rule 8 (base_expr -> assignment .)
    FOR             reduce using rule 8 (base_expr -> assignment .)
    $end            reduce using rule 8 (base_expr -> assignment .)
    }               reduce using rule 8 (base_expr -> assignment .)
    ELSE            reduce using rule 8 (base_expr -> assignment .)
    BREAK           reduce using rule 8 (base_expr -> assignment .)
    CONTINUE        reduce using rule 8 (base_expr -> assignment .)


state 9

    (9) base_expr -> return .

    ;               reduce using rule 9 (base_expr -> return .)
    {               reduce using rule 9 (base_expr -> return .)
    IF              reduce using rule 9 (base_expr -> return .)
    VAR             reduce using rule 9 (base_expr -> return .)
    RETURN          reduce using rule 9 (base_expr -> return .)
    PRINT           reduce using rule 9 (base_expr -> return .)
    WHILE           reduce using rule 9 (base_expr -> return .)
    FOR             reduce using rule 9 (base_expr -> return .)
    $end            reduce using rule 9 (base_expr -> return .)
    }               reduce using rule 9 (base_expr -> return .)
    ELSE            reduce using rule 9 (base_expr -> return .)
    BREAK           reduce using rule 9 (base_expr -> return .)
    CONTINUE        reduce using rule 9 (base_expr -> return .)


state 10

    (10) base_expr -> print .

    ;               reduce using rule 10 (base_expr -> print .)
    {               reduce using rule 10 (base_expr -> print .)
    IF              reduce using rule 10 (base_expr -> print .)
    VAR             reduce using rule 10 (base_expr -> print .)
    RETURN          reduce using rule 10 (base_expr -> print .)
    PRINT           reduce using rule 10 (base_expr -> print .)
    WHILE           reduce using rule 10 (base_expr -> print .)
    FOR             reduce using rule 10 (base_expr -> print .)
    $end            reduce using rule 10 (base_expr -> print .)
    }               reduce using rule 10 (base_expr -> print .)
    ELSE            reduce using rule 10 (base_expr -> print .)
    BREAK           reduce using rule 10 (base_expr -> print .)
    CONTINUE        reduce using rule 10 (base_expr -> print .)


state 11

    (53) if_statement -> IF . ( cond ) expression else_statement

    (               shift and go to state 24


state 12

    (39) loop -> while .

    {               reduce using rule 39 (loop -> while .)
    IF              reduce using rule 39 (loop -> while .)
    VAR             reduce using rule 39 (loop -> while .)
    RETURN          reduce using rule 39 (loop -> while .)
    PRINT           reduce using rule 39 (loop -> while .)
    WHILE           reduce using rule 39 (loop -> while .)
    FOR             reduce using rule 39 (loop -> while .)
    $end            reduce using rule 39 (loop -> while .)
    }               reduce using rule 39 (loop -> while .)
    ELSE            reduce using rule 39 (loop -> while .)
    ;               reduce using rule 39 (loop -> while .)
    BREAK           reduce using rule 39 (loop -> while .)
    CONTINUE        reduce using rule 39 (loop -> while .)


state 13

    (40) loop -> for .

    {               reduce using rule 40 (loop -> for .)
    IF              reduce using rule 40 (loop -> for .)
    VAR             reduce using rule 40 (loop -> for .)
    RETURN          reduce using rule 40 (loop -> for .)
    PRINT           reduce using rule 40 (loop -> for .)
    WHILE           reduce using rule 40 (loop -> for .)
    FOR             reduce using rule 40 (loop -> for .)
    $end            reduce using rule 40 (loop -> for .)
    }               reduce using rule 40 (loop -> for .)
    ELSE            reduce using rule 40 (loop -> for .)
    ;               reduce using rule 40 (loop -> for .)
    BREAK           reduce using rule 40 (loop -> for .)
    CONTINUE        reduce using rule 40 (loop -> for .)


state 14

    (62) assignment -> assignee . = cond
    (63) assignment -> assignee . = matrix
    (64) assignment -> assignee . = STRING
    (65) assignment -> assignee . ADDASSIGN cond
    (66) assignment -> assignee . SUBASSIGN cond
    (67) assignment -> assignee . MULASSIGN cond

    =               shift and go to state 25
    ADDASSIGN       shift and go to state 26
    SUBASSIGN       shift and go to state 27
    MULASSIGN       shift and go to state 28


state 15

    (68) assignment -> VAR . DIVASSIGN cond
    (60) assignee -> VAR .
    (32) range -> VAR . [ int_num_VAR , int_num_VAR ]

    DIVASSIGN       shift and go to state 29
    =               reduce using rule 60 (assignee -> VAR .)
    ADDASSIGN       reduce using rule 60 (assignee -> VAR .)
    SUBASSIGN       reduce using rule 60 (assignee -> VAR .)
    MULASSIGN       reduce using rule 60 (assignee -> VAR .)
    [               shift and go to state 30


state 16

    (19) return -> RETURN . cond
    (20) return -> RETURN .
    (37) cond -> . cmp
    (38) cond -> . operation
    (83) cmp -> . operation < operation
    (84) cmp -> . operation > operation
    (85) cmp -> . operation EQ operation
    (86) cmp -> . operation NEQ operation
    (87) cmp -> . operation GEQ operation
    (88) cmp -> . operation LEQ operation
    (11) operation -> . num
    (12) operation -> . unary_operation
    (13) operation -> . function
    (75) operation -> . operation + operation
    (76) operation -> . operation - operation
    (77) operation -> . operation DOTSUM operation
    (78) operation -> . operation DOTSUB operation
    (79) operation -> . operation * operation
    (80) operation -> . operation / operation
    (81) operation -> . operation DOTMUL operation
    (82) operation -> . operation DOTDIV operation
    (89) operation -> . ( operation )
    (29) num -> . NUMBER
    (30) num -> . REAL_NUMBER
    (31) num -> . VAR
    (71) unary_operation -> . neg_num
    (72) unary_operation -> . transpose
    (33) function -> . function_name ( num )
    (73) neg_num -> . - num
    (74) transpose -> . VAR '
    (34) function_name -> . ONES
    (35) function_name -> . EYE
    (36) function_name -> . ZEROS

  ! shift/reduce conflict for VAR resolved as shift
    ;               reduce using rule 20 (return -> RETURN .)
    {               reduce using rule 20 (return -> RETURN .)
    IF              reduce using rule 20 (return -> RETURN .)
    RETURN          reduce using rule 20 (return -> RETURN .)
    PRINT           reduce using rule 20 (return -> RETURN .)
    WHILE           reduce using rule 20 (return -> RETURN .)
    FOR             reduce using rule 20 (return -> RETURN .)
    $end            reduce using rule 20 (return -> RETURN .)
    }               reduce using rule 20 (return -> RETURN .)
    ELSE            reduce using rule 20 (return -> RETURN .)
    BREAK           reduce using rule 20 (return -> RETURN .)
    CONTINUE        reduce using rule 20 (return -> RETURN .)
    (               shift and go to state 38
    NUMBER          shift and go to state 39
    REAL_NUMBER     shift and go to state 40
    VAR             shift and go to state 41
    -               shift and go to state 37
    ONES            shift and go to state 45
    EYE             shift and go to state 46
    ZEROS           shift and go to state 47

  ! VAR             [ reduce using rule 20 (return -> RETURN .) ]

    cond                           shift and go to state 31
    cmp                            shift and go to state 32
    operation                      shift and go to state 33
    num                            shift and go to state 34
    unary_operation                shift and go to state 35
    function                       shift and go to state 36
    neg_num                        shift and go to state 42
    transpose                      shift and go to state 43
    function_name                  shift and go to state 44

state 17

    (15) print -> PRINT . print_body
    (16) print_body -> . STRING
    (17) print_body -> . cond
    (18) print_body -> . print_body , cond
    (37) cond -> . cmp
    (38) cond -> . operation
    (83) cmp -> . operation < operation
    (84) cmp -> . operation > operation
    (85) cmp -> . operation EQ operation
    (86) cmp -> . operation NEQ operation
    (87) cmp -> . operation GEQ operation
    (88) cmp -> . operation LEQ operation
    (11) operation -> . num
    (12) operation -> . unary_operation
    (13) operation -> . function
    (75) operation -> . operation + operation
    (76) operation -> . operation - operation
    (77) operation -> . operation DOTSUM operation
    (78) operation -> . operation DOTSUB operation
    (79) operation -> . operation * operation
    (80) operation -> . operation / operation
    (81) operation -> . operation DOTMUL operation
    (82) operation -> . operation DOTDIV operation
    (89) operation -> . ( operation )
    (29) num -> . NUMBER
    (30) num -> . REAL_NUMBER
    (31) num -> . VAR
    (71) unary_operation -> . neg_num
    (72) unary_operation -> . transpose
    (33) function -> . function_name ( num )
    (73) neg_num -> . - num
    (74) transpose -> . VAR '
    (34) function_name -> . ONES
    (35) function_name -> . EYE
    (36) function_name -> . ZEROS

    STRING          shift and go to state 49
    (               shift and go to state 38
    NUMBER          shift and go to state 39
    REAL_NUMBER     shift and go to state 40
    VAR             shift and go to state 41
    -               shift and go to state 37
    ONES            shift and go to state 45
    EYE             shift and go to state 46
    ZEROS           shift and go to state 47

    print_body                     shift and go to state 48
    cond                           shift and go to state 50
    cmp                            shift and go to state 32
    operation                      shift and go to state 33
    num                            shift and go to state 34
    unary_operation                shift and go to state 35
    function                       shift and go to state 36
    neg_num                        shift and go to state 42
    transpose                      shift and go to state 43
    function_name                  shift and go to state 44

state 18

    (41) while -> WHILE . ( cond ) loop_body

    (               shift and go to state 51


state 19

    (42) for -> FOR . VAR = int_num_VAR : int_num_VAR loop_body

    VAR             shift and go to state 52


state 20

    (61) assignee -> range .

    =               reduce using rule 61 (assignee -> range .)
    ADDASSIGN       reduce using rule 61 (assignee -> range .)
    SUBASSIGN       reduce using rule 61 (assignee -> range .)
    MULASSIGN       reduce using rule 61 (assignee -> range .)


state 21

    (2) mul_expressions -> expression mul_expressions .

    $end            reduce using rule 2 (mul_expressions -> expression mul_expressions .)
    }               reduce using rule 2 (mul_expressions -> expression mul_expressions .)


state 22

    (5) expression -> base_expr ; .

    {               reduce using rule 5 (expression -> base_expr ; .)
    IF              reduce using rule 5 (expression -> base_expr ; .)
    VAR             reduce using rule 5 (expression -> base_expr ; .)
    RETURN          reduce using rule 5 (expression -> base_expr ; .)
    PRINT           reduce using rule 5 (expression -> base_expr ; .)
    WHILE           reduce using rule 5 (expression -> base_expr ; .)
    FOR             reduce using rule 5 (expression -> base_expr ; .)
    $end            reduce using rule 5 (expression -> base_expr ; .)
    }               reduce using rule 5 (expression -> base_expr ; .)
    ELSE            reduce using rule 5 (expression -> base_expr ; .)


state 23

    (14) code_block -> { mul_expressions . }

    }               shift and go to state 53


state 24

    (53) if_statement -> IF ( . cond ) expression else_statement
    (37) cond -> . cmp
    (38) cond -> . operation
    (83) cmp -> . operation < operation
    (84) cmp -> . operation > operation
    (85) cmp -> . operation EQ operation
    (86) cmp -> . operation NEQ operation
    (87) cmp -> . operation GEQ operation
    (88) cmp -> . operation LEQ operation
    (11) operation -> . num
    (12) operation -> . unary_operation
    (13) operation -> . function
    (75) operation -> . operation + operation
    (76) operation -> . operation - operation
    (77) operation -> . operation DOTSUM operation
    (78) operation -> . operation DOTSUB operation
    (79) operation -> . operation * operation
    (80) operation -> . operation / operation
    (81) operation -> . operation DOTMUL operation
    (82) operation -> . operation DOTDIV operation
    (89) operation -> . ( operation )
    (29) num -> . NUMBER
    (30) num -> . REAL_NUMBER
    (31) num -> . VAR
    (71) unary_operation -> . neg_num
    (72) unary_operation -> . transpose
    (33) function -> . function_name ( num )
    (73) neg_num -> . - num
    (74) transpose -> . VAR '
    (34) function_name -> . ONES
    (35) function_name -> . EYE
    (36) function_name -> . ZEROS

    (               shift and go to state 38
    NUMBER          shift and go to state 39
    REAL_NUMBER     shift and go to state 40
    VAR             shift and go to state 41
    -               shift and go to state 37
    ONES            shift and go to state 45
    EYE             shift and go to state 46
    ZEROS           shift and go to state 47

    cond                           shift and go to state 54
    cmp                            shift and go to state 32
    operation                      shift and go to state 33
    num                            shift and go to state 34
    unary_operation                shift and go to state 35
    function                       shift and go to state 36
    neg_num                        shift and go to state 42
    transpose                      shift and go to state 43
    function_name                  shift and go to state 44

state 25

    (62) assignment -> assignee = . cond
    (63) assignment -> assignee = . matrix
    (64) assignment -> assignee = . STRING
    (37) cond -> . cmp
    (38) cond -> . operation
    (25) matrix -> . [ matrix_body ]
    (83) cmp -> . operation < operation
    (84) cmp -> . operation > operation
    (85) cmp -> . operation EQ operation
    (86) cmp -> . operation NEQ operation
    (87) cmp -> . operation GEQ operation
    (88) cmp -> . operation LEQ operation
    (11) operation -> . num
    (12) operation -> . unary_operation
    (13) operation -> . function
    (75) operation -> . operation + operation
    (76) operation -> . operation - operation
    (77) operation -> . operation DOTSUM operation
    (78) operation -> . operation DOTSUB operation
    (79) operation -> . operation * operation
    (80) operation -> . operation / operation
    (81) operation -> . operation DOTMUL operation
    (82) operation -> . operation DOTDIV operation
    (89) operation -> . ( operation )
    (29) num -> . NUMBER
    (30) num -> . REAL_NUMBER
    (31) num -> . VAR
    (71) unary_operation -> . neg_num
    (72) unary_operation -> . transpose
    (33) function -> . function_name ( num )
    (73) neg_num -> . - num
    (74) transpose -> . VAR '
    (34) function_name -> . ONES
    (35) function_name -> . EYE
    (36) function_name -> . ZEROS

    STRING          shift and go to state 57
    [               shift and go to state 58
    (               shift and go to state 38
    NUMBER          shift and go to state 39
    REAL_NUMBER     shift and go to state 40
    VAR             shift and go to state 41
    -               shift and go to state 37
    ONES            shift and go to state 45
    EYE             shift and go to state 46
    ZEROS           shift and go to state 47

    cond                           shift and go to state 55
    matrix                         shift and go to state 56
    cmp                            shift and go to state 32
    operation                      shift and go to state 33
    num                            shift and go to state 34
    unary_operation                shift and go to state 35
    function                       shift and go to state 36
    neg_num                        shift and go to state 42
    transpose                      shift and go to state 43
    function_name                  shift and go to state 44

state 26
